    behavior added by GB#1195 fix).
  * debian/rules: Fix build cleanup.
  * Allow None as parent argument for WizardDialog (restores GB#825 fix).
  * Restore hildon.Note custom constructor, fixing a few bugs and simplifying
    the arguments.
  * Add support for hildon.WizardDialog.set_forward_page_func(), plus unit
    tests and an example.
  * Restore working examples and tests from previous version (0.8.9).

  [ Bruno dos Santos de Araujo ]
  * Split package into -dev (examples, .defs) and -tests packages.

 -- Bruno dos Santos de Araujo <bruno.araujo@indt.org.br>  Mon, 18 May 2009 15:13:15 -0400

python-hildon (0.9.0-1maemo5) unstable; urgency=low

  * Add versioned build dependency on libhildonfm2-dev >= 1:2.11+0m5 to use
    version that fixes MB#4450.
  * Update .defs and hildon.override for Maemo 5.0 beta API.
  * Fix refcount bug in set_app_menu and add test (fixes MB#4492).
  * Add support for .defs transformation in hildon_gen_defs.sh.
  * setup.py: add gconf-2.0 and gnome-vfs-2.0 as dependencies, as a workaround
    for MB#4538.
  * Restore hildonglade module.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Tue, 12 May 2009 15:27:28 -0400

python-hildon (0.9.0-1maemo4) unstable; urgency=low

  * Remove libhildondesktop-1 from setup.py.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Mon, 11 May 2009 14:40:16 -0400

python-hildon (0.9.0-1maemo3) unstable; urgency=low

  * Remove unused build dependency on libhildondesktop1-dev.

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Fri, 08 May 2009 14:43:35 -0400

python-hildon (0.9.0-1maemo2) unstable; urgency=low

  * Remove libhildonhelp dependency (removed since fremantle 5 beta).
  * Add workaround for missing headers in libhildonfm2-dev (MB#4450).

 -- Anderson Lizardo <anderson.lizardo@indt.org.br>  Sat, 02 May 2009 20:53:57 -0400

python-hildon (0.9.0-1maemo1) unstable; urgency=low

  * Bump version to 0.9.0.
  * Restore deprecated API (should avoid breaking existing applications).